# agent-ops

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.opencode/skills/agent-ops-mcp/: SKILL.md
.sisyphus/plans/: 2026-07-02-batch-exec.md
config/: hosts.example.yaml  mcp-config.example.json  rmux.conf
crates/agent-ops-cli/: Cargo.toml
crates/agent-ops-cli/src/: connect.rs  main.rs  protocol.rs  replay.rs  terminal.rs
crates/agent-ops-cli/src/ai/: mod.rs  opencode_impl.rs
crates/agent-ops-cli/src/tui/: ai_panel.rs  keymap.rs  mod.rs
crates/agent-ops-core/: Cargo.toml
crates/agent-ops-core/src/: lib.rs  types.rs
crates/agent-ops-mcp/: Cargo.toml
crates/agent-ops-mcp/src/: audit_cli.rs  error.rs  files.rs  handler.rs  main.rs  recording_sync.rs  router.rs  schema.rs  stream.rs  tools.rs  transport.rs  tunnel.rs
crates/agent-ops-mcp/src/audit/: cleanup.rs  log.rs  mod.rs  query.rs
crates/agent-ops-mcp/src/tools/: batch.rs  bridge_audit.rs  buffer.rs  common.rs  deploy.rs  discovery.rs  exec.rs  file.rs  mod.rs  output.rs  pane.rs  session.rs  tunnel.rs  window.rs
crates/rmux-bridge/: Cargo.toml
crates/rmux-bridge/src/: auth.rs  bridge_audit.rs  cast_recorder.rs  config.rs  files.rs  interactive.rs  main.rs  protocol.rs  proxy.rs  terminal_state.rs  tls.rs
crates/rmux-bridge/src/protocol/: buffer.rs  exec.rs  mod.rs  output.rs  pane.rs  session.rs  window.rs
deploy/: generate-certs.sh  install-bridge.sh  install-daemon.sh  rmux-bridge.service  rmux-daemon.service
docs/: DEPLOY.md  FEATURE-GAPS.md  REVIEW-2026-07-02.md  REVIEW.md  TOOLS.md  connect-design.md  project-analysis.md  stream-pane-design.md  terminal-state-design.md  test-plan-connect.md
docs/superpowers/plans/: 2026-07-07-connect-interactive-terminal.md  2026-07-13-exec-precheck-safety.md  2026-07-13-security-hardening.md
docs/superpowers/specs/: 2026-07-22-audit-trail-design.md
scripts/: mcp_remote_test.py  mcp_smoke.py
