[package]
name = "agent-ops-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-ops"
path = "src/main.rs"

[dependencies]
agent-ops-core.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
