[package]
name = "agent-ops-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-ops-mcp"
path = "src/main.rs"

[dependencies]
agent-ops-core.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rustls-native-certs = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
glob = "0.3"
hex = "0.4"
futures = "0.3"
quinn = { version = "0.11", features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
