[package]
name = "agent-ops-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-ops-mcp"
path = "src/main.rs"

[dependencies]
agent-ops-core.workspace = true
tokio.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
regex.workspace = true
glob = "0.3"
hex = "0.4"
sha2 = "0.10"
futures.workspace = true
quinn = { workspace = true, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
