[package]
name = "rmux-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rmux-bridge"
path = "src/main.rs"

[dependencies]
agent-ops-core.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
rmux-sdk = "0.8"
regex.workspace = true
sha2 = "0.10"
futures.workspace = true
quinn.workspace = true
tokio-yamux = "0.3"
base64 = "0.22"
