[package]
name = "rmux-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rmux-bridge"
path = "src/main.rs"

[dependencies]
agent-ops-core.workspace = true
tokio.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
rmux-sdk = "0.9"
regex.workspace = true
sha2 = "0.10"
futures.workspace = true
quinn.workspace = true
base64 = "0.22"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
